[package]
name = "blueshift_escrow"
version = "0.1.0"
edition = "2021"

[dependencies]
num-derive = "0.4"
num-traits = "0.2"
pinocchio = "0.9.0"
pinocchio-associated-token-account = "0.2.0"
pinocchio-system = "0.3.0"
pinocchio-token = "0.4.0"
thiserror = { version = "1.0", default-features = false }

[lib]
crate-type = ["lib", "cdylib"]
